--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="gamepad2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gamepad2.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="xbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\xbox.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
